2005-02-19	Benedikt Meurer <benny@xfce.org>

	* configure.ac, po/zh_CN.po, terminal/terminal-window.c, NEWS, THANKS:
	  Add zh_CN translations, thanks to Army Gu <redarmy@gmail.com>.

2005-02-15	Benedikt Meurer <benny@xfce.org>

	* Terminal.spec.in: Add --enable-final to the configure line.
	* configure.ac: Depend on libexo 0.3.

2005-01-31	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-preferences-dialog.c: Added more tooltips.
	* po/Terminal.pot, po/de.po: Updated the german translations.

2005-01-31	Benedikt Meurer <benny@xfce.org>

	* terminal/Makefile.am, terminal/HACKING, po/POTFILES.in: Added rules
	  to properly auto-generate the built files. These autogeneration rules
	  are only available if --enable-maintainer-mode is specified for 
	  configure (which is usually the case for autogen runs, but not
	  for enduser configure runs).
	* configure.ac, terminal/terminal-dbus.c, terminal/terminal-dbus.h,
	  terminal/terminal-app.c, terminal/terminal-app.h, terminal/main.c:
	  D-BUS is now an optional dependency, and Terminal is prepared for
	  the upcoming breakage with D-BUS 0.30, using some runtime linker
	  magic.
	* po/POTFILES.in: Don't include autogenerated files here.

2005-01-30	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-window.c(terminal_window_confirm_close): Made
	  "Close all tabs" the default button.
	* terminal/main.c(main): Made GtkAccelGroup accept Mod5 (Super_L
	  and Super_R) as modifier.
	* terminal/terminal-shortcut-editor.c(terminal_shortcut_editor_compose):
	  Use gtk_accelerator_get_default_mod_mask() as mask for valid
	  modifiers and make sure, that Terminal doesn't pick up AltGr,
	  Scroll_Lock, Super_L or Super_R as key values.
	* terminal/terminal-screen.c(terminal_screen_get_title): Removed
	  disturbing debug message.
	* terminal/terminal-window.c(terminal_window_rebuild_gomenu): Be sure
	  to override the "can-activate-accel" method of the Go menu items,